# annual-reports-parser

./: .gitignore  .pre-commit-config.yaml  LICENSE  ec2_setup.sh  main.py  pyproject.toml  send_email.py  setup_deepseek_r1_model.sh  setup_embeddings_model.sh  setup_llm_model.sh
bronze_to_silver/: extract.py  main.py
clean_and_preprocess/: __init__.py
embeddings/: __init__.py  chroma_ef.py  embed_doc.py  from_parquet.py  main.py
extract_text/: __init__.py  pdf_plumber.py  pymupdf.py
extract_text/pymupdf_util/: multi_column.py
pdf_to_page/: extract.py  main.py
qna/: main.py  qna.py
query/: __init__.py
