[project]
name = "financial-pdfs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.36.26",
    "nltk>=3.9.1",
    "openai>=1.69.0",
    "pymupdf4llm>=0.0.19",
]

[dependency-groups]
dev = [
    "types-tqdm>=4.67.0.20241221",
    "types-colorama>=0.4.15.20240311",
    "types-protobuf>=5.29.1.20250208",
    "types-pywin32>=308.0.0.20250128",
    "types-setuptools>=75.8.0.20250210",
    "types-tabulate>=0.9.0.20241207",
    "types-boto3>=1.36.26",
    "mypy>=1.15.0",
    "ruff>=0.9.6",
    "types-jmespath>=1.0.2.20240106",
    "pandas-stubs>=2.2.3.250308",
    "types-pygments>=2.19.0.20250305",
]

# mypy global options:

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
