[project]
name = "financial_pdfs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.36.26",
    "chromadb>=1.0.5",
    "openai>=1.69.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "requests>=2.32.3",
    "click>=8.1.8",
    "docling>=2.34.0",
    "langchain-docling>=0.2.0",
]

# mypy global options:

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true

[tool.uv]
dev-dependencies = [
    "ipython>=9.3.0",
    "mypy>=1.16.0",
    "pandas-stubs>=2.2.3.250308",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pre-commit>=4.2.0",
    "ruff>=0.9.6",
    "ty>=0.0.1a11",
    "types-boto3>=1.36.26",
    "types-colorama>=0.4.15.20240311",
    "types-jmespath>=1.0.2.20240106",
    "types-protobuf>=5.29.1.20250208",
    "types-pygments>=2.19.0.20250305",
    "types-pywin32>=308.0.0.20250128",
    "types-requests>=2.32.0.20241016",
    "types-setuptools>=75.8.0.20250210",
    "types-tabulate>=0.9.0.20241207",
    "types-tqdm>=4.67.0.20241221",
]
